--- a/package.json
+++ b/package.json
@@ -2,42 +2,64 @@
   "name": "polaris",
   "version": "0.0.1",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "@testing-library/react-hooks": "^3.2.1",
-    "@xstate/react": "^1.0.0-rc.3",
-    "date-fns": "^2.12.0",
+    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.2",
+    "@react-native-community/push-notification-ios": "^1.2.2",
+    "@react-navigation/bottom-tabs": "^5.5.2",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
+    "@testing-library/react-hooks": "^3.3.0",
+    "@xstate/react": "^1.0.0-rc.4",
+    "date-fns": "^2.14.0",
     "debounce": "^1.2.0",
     "email-validator": "^2.0.4",
-    "expo": "^37.0.0",
-    "expo-asset": "~8.1.4",
+    "expo": "^37.0.12",
+    "expo-asset": "^8.1.5",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-localization": "~8.1.0",
     "expo-permissions": "~8.1.0",
+    "expo-secure-store": "~8.1.0",
+    "expo-splash-screen": "^0.2.3",
+    "expo-updates": "~0.2.0",
+    "expo-web-browser": "~8.2.1",
     "fbemitter": "^2.1.1",
     "i18next": "19.4.2",
-    "i18next-browser-languagedetector": "^4.1.0",
+    "i18next-browser-languagedetector": "^4.3.0",
     "lodash": "^4.17.15",
     "mockdate": "^2.0.5",
-    "react": "16.9.0",
-    "react-art": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-i18next": "^11.3.4",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react": "16.11.0",
+    "react-art": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-i18next": "^11.5.1",
+    "react-native": "0.62.2",
+    "react-native-dotenv": "^0.2.0",
+    "react-native-google-safetynet": "^1.0.0",
+    "react-native-ios11-devicecheck": "^0.0.3",
+    "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-modal": "^11.5.6",
+    "react-native-permissions": "^2.1.5",
+    "react-native-push-notification": "^3.5.2",
     "react-native-qrcode-svg": "^6.0.3",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^3.0.3",
+    "react-native-screens": "^2.8.0",
     "react-native-side-menu": "^1.1.3",
-    "react-native-svg": "11.0.1",
+    "react-native-ssl-pinning": "^1.4.6",
+    "react-native-svg": "^9.13.3",
+    "react-native-unimodules": "~0.9.1",
     "react-native-web": "^0.11.7",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-router-native": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-native": "^5.2.0",
     "react-router-navigation": "^2.0.0-alpha.10",
     "react-spring": "^8.0.27",
     "svg-path-properties": "^0.4.8",
     "tree-kill": "^1.2.2",
     "use-interval": "^1.2.1",
-    "xstate": "^4.9.1"
+    "xstate": "^4.10.0"
   },
   "scripts": {
     "build": "run-p build:*",
@@ -46,12 +68,11 @@
     "doc:serve": "docsify serve -p 4000 docs",
     "deploy": "run-p deploy:*",
     "deploy:web": "gh-pages -d build",
-    "eject": "run-p eject:*",
     "eject:web": "react-scripts eject",
     "eject:native": "expo eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "npm run lint -- --fix",
-    "start": "run-p start:*",
+    "start": "react-native start",
     "start:hard": "run-p start:*:hard",
     "start:web": "expo start --web --no-https",
     "start:api": "cd server && npm run build && npm run start",
@@ -70,7 +91,9 @@
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 9001 -c ./storybook/.storybook",
     "predeploy": "npm run build:web",
-    "postinstall": "node ./node_modules/patch-package && cd server && npm i && cd .. && node init-env.js"
+    "postinstall": "node ./node_modules/patch-package && cd server && npm i && cd .. && node init-env.js",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -114,54 +137,57 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
     "@expo/webpack-config": "^0.11.23",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/react": "^5.3.18",
-    "@testing-library/jest-dom": "^5.5.0",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/react": "^5.3.19",
+    "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/jest-native": "^3.1.0",
-    "@types/googlemaps": "^3.39.3",
+    "@types/googlemaps": "^3.39.7",
     "@types/jest": "^24.9.1",
     "@types/markerclustererplus": "^2.1.33",
-    "@types/pino": "^6.0.0",
-    "@types/react": "^16.9.11",
-    "@types/react-native": "^0.62.2",
+    "@types/pino": "^6.3.0",
+    "@types/react": "^16.9.36",
+    "@types/react-native": "^0.62.13",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-router-native": "^5.1.0",
     "@types/react-router-navigation": "^1.0.10",
     "@types/react-test-renderer": "^16.9.2",
     "@types/uuid": "^3.4.8",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-jest": "~25.2.6",
     "babel-loader": "^8.1.0",
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-preset-expo": "^8.1.0",
-    "docsify-cli": "^4.3.0",
+    "babel-preset-expo": "^8.2.1",
+    "docsify-cli": "^4.4.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^9.2.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-standard": "^4.0.1",
-    "expo-cli": "^3.20.9",
+    "expo-cli": "^3.21.5",
     "gh-pages": "^2.2.0",
     "husky": "^4.2.5",
+    "jest": "~25.2.6",
     "jest-expo": "^37.0.0",
     "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^10.2.2",
+    "lint-staged": "^10.2.10",
     "npm-run-all": "^4.1.5",
     "patch-package": "^6.2.2",
     "prettier": "^2.0.4",
-    "react-native-gesture-handler": "~1.6.1",
-    "react-native-testing-library": "^1.13.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-testing-library": "^1.14.0",
     "react-test-renderer": "16.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.5"
   },
   "browserslist": [
     ">0.2%",
@@ -171,7 +197,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "npm run typecheck && lint-staged"
+      "pre-commit": "npm run lint-staged"
     }
   }
 }
