--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-permissions": "~8.1.0",
     "expo-secure-store": "~8.1.0",
     "expo-splash-screen": "^0.2.3",
-    "expo-updates": "~0.2.0",
+    "expo-updates": "^0.2.9",
     "expo-web-browser": "~8.2.1",
     "fbemitter": "^2.1.1",
     "i18next": "19.4.2",
@@ -49,7 +49,7 @@
     "react-native-side-menu": "^1.1.3",
     "react-native-ssl-pinning": "^1.4.6",
     "react-native-svg": "^9.13.3",
-    "react-native-unimodules": "~0.9.1",
+    "react-native-unimodules": "^0.9.1",
     "react-native-web": "^0.11.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
