--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && lint-staged"
+      "pre-commit": "npm run typecheck && lint-staged"
     }
   },
   "lint-staged": {
