Add script generating svg components with SVGR

--- a/package.json
+++ b/package.json
@@ -119,6 +119,9 @@
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
     "@storybook/react": "^5.3.18",
+    "@svgr/core": "^5.4.0",
+    "@svgr/plugin-prettier": "^5.4.0",
+    "@svgr/plugin-svgo": "^5.4.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/jest-native": "^3.1.0",
     "@types/googlemaps": "^3.39.3",
