--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-expo": "^8.1.0",
+    "chalk": "^4.1.0",
     "docsify-cli": "^4.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
