--- a/package.json
+++ b/package.json
@@ -165,7 +165,8 @@
     "react-native-gesture-handler": "~1.6.1",
     "react-native-testing-library": "^1.13.2",
     "react-test-renderer": "16.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "yargs": "^15.3.1"
   },
   "browserslist": [
     ">0.2%",
