--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "react-art": "16.11.0",
     "react-dom": "16.11.0",
     "react-i18next": "^11.5.1",
-    "react-native": "0.62.2",
+    "react-native": "^0.62.2",
+    "react-native-device-info": "^5.6.1",
     "react-native-dotenv": "^0.2.0",
     "react-native-google-safetynet": "^1.0.0",
     "react-native-ios11-devicecheck": "^0.0.3",
     "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-localize": "^1.4.0",
     "react-native-modal": "^11.5.6",
     "react-native-permissions": "^2.1.5",
     "react-native-push-notification": "^3.5.2",
